--- a/external-crates/move/crates/move-cli/Cargo.toml
+++ b/external-crates/move/crates/move-cli/Cargo.toml
@@ -44,6 +44,7 @@ move-prover.workspace = true
 move-unit-test.workspace = true
 move-errmapgen.workspace = true
 move-bytecode-viewer.workspace = true
+regex.workspace = true
 
 [dev-dependencies]
 datatest-stable.workspace = true
@@ -65,4 +66,4 @@ name = "build_testsuite"
 harness = false
 
 [features]
-tiered-gas = [ "move-vm-test-utils/tiered-gas" ]
+tiered-gas = ["move-vm-test-utils/tiered-gas"]
