--- a/crates/sui-bridge/Cargo.toml
+++ b/crates/sui-bridge/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+diesel = { version = "2.1.4", features = ["postgres", "r2d2", "serde_json"] }
 ethers = "2.0"
 tokio = { workspace = true, features = ["full"] }
 sui-types.workspace = true
@@ -26,6 +27,7 @@ typed-store.workspace = true
 mysten-metrics.workspace = true
 sui-sdk.workspace = true
 sui-config.workspace = true
+sui-data-ingestion-core.workspace = true
 clap.workspace = true
 tracing.workspace = true
 bin-version.workspace = true
@@ -59,3 +61,7 @@ hex-literal = "0.3.4"
 [[bin]]
 name = "sui-bridge-cli"
 path = "src/tools/cli.rs"
+
+[[bin]]
+name = "bridge-indexer"
+path = "src/indexer/main.rs"
