--- a/external-crates/move/crates/move-analyzer/Cargo.toml
+++ b/external-crates/move/crates/move-analyzer/Cargo.toml
@@ -18,6 +18,7 @@ itertools.workspace = true
 lsp-server.workspace = true
 lsp-types.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 tempfile.workspace = true
 url.workspace = true
 vfs.workspace = true
