--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          # echo "s3_archive_exist=$(curl -Is https://sui-releases.s3.us-east-1.amazonaws.com/releases/sui-${{ env.sui_tag }}-${{ env.os_type }}.tgz | head -n 1 | grep '200 OK')" >> $GITHUB_ENV
+          echo "s3_archive_exist=$(curl -Is https://sui-releases.s3.us-east-1.amazonaws.com/releases/sui-${{ env.sui_tag }}-${{ env.os_type }}.tgz | head -n 1 | grep '200 OK')" >> $GITHUB_ENV
 
       - name: Download archive, if it exists
         if: ${{ env.s3_archive_exist != '' }}
@@ -300,13 +300,13 @@ jobs:
           email: ${{ github.triggering_actor }}@users.noreply.github.com
 
   # Tag all sui images with release tag, so that they can be easily found
-  # tag-docker-hub-images:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Dispatch Tagging of images in DockerHub, in MystenLabs/sui-operations
-  #       uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
-  #       with:
-  #         repository: MystenLabs/sui-operations
-  #         token: ${{ secrets.DOCKER_BINARY_BUILDS_DISPATCH }}
-  #         event-type: tag-docker-images
-  #         client-payload: '{"sui_commit": "${{ github.sha }}", "repo_name": "all", "tag": "${{ env.TAG_NAME }}"}'
+  tag-docker-hub-images:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dispatch Tagging of images in DockerHub, in MystenLabs/sui-operations
+        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
+        with:
+          repository: MystenLabs/sui-operations
+          token: ${{ secrets.DOCKER_BINARY_BUILDS_DISPATCH }}
+          event-type: tag-docker-images
+          client-payload: '{"sui_commit": "${{ github.sha }}", "repo_name": "all", "tag": "${{ env.TAG_NAME }}"}'
