Commit per epoch config load to effects v2

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -1107,6 +1107,8 @@ UnchangedSharedKind:
       Cancelled:
         NEWTYPE:
           TYPENAME: SequenceNumber
+    4:
+      PerEpochConfig: UNIT
 UpgradeInfo:
   STRUCT:
     - upgraded_id:
