--- a/.github/workflows/github-issues-monitor.yml
+++ b/.github/workflows/github-issues-monitor.yml
@@ -1,9 +1,7 @@
-name: GitHub Issues and External PRs Monitor
+name: GitHub Issues Monitor
 
 on:
   issues:
-    types: [opened]
-  pull_request_target:
     types: [opened]
 
 jobs: 
