--- a/Cargo.toml
+++ b/Cargo.toml
@@ -398,7 +398,7 @@ pretty_assertions = "1.3.0"
 prettytable-rs = "0.10.0"
 proc-macro2 = "1.0.47"
 prometheus = "0.13.3"
-prometheus-http-query = { version = "0.6.6", default_features = false, features = [
+prometheus-http-query = { version = "0.6.6", default-features = false, features = [
   "rustls-tls",
 ] }
 prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
@@ -414,7 +414,7 @@ rand = "0.8.5"
 rayon = "1.5.3"
 rcgen = "0.9.2"
 regex = "1.7.1"
-reqwest = { version = "0.11.20", default_features = false, features = [
+reqwest = { version = "0.11.20", default-features = false, features = [
   "blocking",
   "json",
   "rustls-tls",
@@ -429,10 +429,10 @@ rocksdb = { version = "0.21.0", features = [
 ], default-features = false }
 ron = "0.8.0"
 rstest = "0.16.0"
-rusoto_core = { version = "0.48.0", default_features = false, features = [
+rusoto_core = { version = "0.48.0", default-features = false, features = [
   "rustls",
 ] }
-rusoto_kms = { version = "0.48.0", default_features = false, features = [
+rusoto_kms = { version = "0.48.0", default-features = false, features = [
   "rustls",
 ] }
 russh = "0.38.0"
