--- a/crates/sui-package-management/Cargo.toml
+++ b/crates/sui-package-management/Cargo.toml
@@ -17,5 +17,6 @@ sui-json-rpc-types.workspace = true
 sui-sdk.workspace = true
 sui-types.workspace = true
 
+move-core-types.workspace = true
 move-package.workspace = true
 move-symbol-pool.workspace = true
